Fixed scoll on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
     height: 80vh; 
     display: flex;
     padding: 4rem;
-    overflow-y: auto; 
+    
   }
   
   @media (max-width: 500px) {
     .App {
       flex-direction: column-reverse; 
       align-items: center;
+      overflow-y: auto; 
     }
   
     .App > div:first-child {
@@ -22,7 +23,6 @@
       order: 1; 
       width: 100%; 
       max-width: 100%; 
-      height: 30vh; 
     }
   }
   
